minor cleaning-up